# irishrail

./: README.md  pyproject.toml
irishrail/: __init__.py  api.py  cli.py  client.py  irishrail.py
irishrail/commands/: __init__.py  live.py  stations.py
tests/: test_api.py
tests/data/: station_data.json  stations.json
