[tool.poetry]
name = "irishrail"
version = "0.0.7a"
description = ""
authors = ["Marco Rougeth <rougeth@users.noreply.github.com>"]

[tool.poetry.scripts]
irishrail = 'irishrail.cli:cli'

[tool.poetry.dependencies]
python = "^3.8"
rich = "^12.4.4"
httpx = "^0.23.0"
click = "^8.1.3"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
ipython = "^8.4.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
